# langchain-fastapi-react

./: .gitignore  pyproject.toml
src/llm_interface/: package.json
src/llm_server/: main.py  simple_agent.py
