[tool.poetry]
name = "langchain-fastapi-react"
version = "0.1.0"
description = ""
authors = ["MakMemEng <yatani.mems4568@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
langchain = "^0.0.300"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
